--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ 'login.title'|trans }}{% endblock %}
 
 {% block body %}
-    <div class="p-2 p-md-5 mb-4 bg-light rounded-3">
+    <div class="p-2 p-md-3 p-md-5 mb-4 bg-light rounded-3">
         <h1 class="display-4">{{ 'login.title'|trans }}</h1>
         <p class="lead">{{ 'login.description'|trans }}</p>
         <hr class="my-4">
