--- a/templates/registration/edit_password.html.twig
+++ b/templates/registration/edit_password.html.twig
@@ -3,18 +3,16 @@
 {% block title %}{{ 'registration.edit.password.title'|trans }}{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="p-5 mb-4 bg-light rounded-3">
-            <h1 class="display-4">{{ 'registration.edit.password.title'|trans }}</h1>
-            <p class="lead">{{ 'registration.edit.password.description'|trans }}</p>
-            <hr class="my-4">
-            {{ form_start(registrationForm) }}
-            {{ form_row(registrationForm._token) }}
-            {{ form_row(registrationForm.email, {label: 'registration.data.email'}) }}
-            {{ form_row(registrationForm.plainPassword, {label: 'registration.data.password'}) }}
+    <div class="p-2 p-md-3 bg-light rounded-3">
+        <h1 class="display-4">{{ 'registration.edit.password.title'|trans }}</h1>
+        <p class="lead">{{ 'registration.edit.password.description'|trans }}</p>
+        <hr class="my-4">
+        {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm._token) }}
+        {{ form_row(registrationForm.email, {label: 'registration.data.email'}) }}
+        {{ form_row(registrationForm.plainPassword, {label: 'registration.data.password'}) }}
 
-            <button class="btn btn-success btn-lg" type="submit">{{ 'global.forms.button.save'|trans }}</button>
-            {{ form_end(registrationForm, {'render_rest': false}) }}
-        </div>
+        <button class="btn btn-success btn-lg" type="submit">{{ 'global.forms.button.save'|trans }}</button>
+        {{ form_end(registrationForm, {'render_rest': false}) }}
     </div>
 {% endblock %}
